style: improve the upload real page and me the layou white

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 html {
-	background-color: black;
-	color: white;
+	background-color: lightgray;
+	color: black;
 }
 
 ::-webkit-scrollbar {
